# test_asigment

./: Documentation.md  cloudwatch_manager.py  docker_manager.py  main.py  pyproject.toml  requirements.txt  utilities.py
tests/: test_cloudwatch_manager.py  test_docker_manager.py  test_utilities.py
